Adjusted profile page ongoing projects created line to the line below, but margin spaces still need to be adjusted and spacing is required within 'Created by sentence'. To be solved later

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -268,3 +268,11 @@ label {
   width: 5em;
   margin-left: 1.5em;
 }
+
+.projectcreation_info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 5.2em;
+  margin-top: 0;
+}
